--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ const gpxFile = '/tracks/5_6_of_settle_loop_twice.gpx';
     <RandomNumber client:idle/>
 
     <div style="height:100vh;">
-        <LeafletMap gpxFile={gpxFile} client:only/>
+        <LeafletMap gpxFile={gpxFile} client:only="react"/>
     </div>
 
 </BaseLayout>
